--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,19 @@
 language: go
 
 go:
-  - 1.11.x
+  - 1.12.x
 
 env:
   - GO111MODULE=on
 
-install:
-  - go get -v ./...
+before_install:
+  - go get -t -v ./...
 
 script:
-- "./_bin/test.sh"
+- go test -race -coverprofile=coverage.txt -covermode=atomic
+
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
 
 before_deploy:
   - "./_bin/build.sh darwin ${TRAVIS_TAG}"
